# SophonQQBot

./: .gitignore  QQ群AI助手开发.md  README.md  requirements.txt
nonebot2-qq-starter/: README.md  deepseek_prompt.txt  pyproject.toml  system_prompt copy.txt  system_prompt.txt  welcome_prompt.json
nonebot2-qq-starter/plugins/ranker/: __init__.py  ranker_impl.py
nonebot2-qq-starter/plugins/sophon/: __init__.py  answerer_try.py  answerers.py  config.py  utils.py
nonebot2-qq-starter/plugins/sophon/simply_try/: answer_api.py
nonebot2-qq-starter/plugins/weather/: __init__.py
nonebot2-qq-starter/plugins/welcome/: __init__.py
