[project]
name = "nonebot2-qq-starter"
version = "0.1.0"
description = "nonebot2-qq-starter"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = [
    # "nonebot_plugin_gocqhttp", 
# "manual_plugins/nonebot_plugin_naturel_gpt/nonebot_plugin_naturel_gpt"
# "nonebot_plugin_naturel_gpt",
    # "sophon"
    # "ranker"
]
plugin_dirs = ["plugins"]
builtin_plugins = ["echo"]
